kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: madhouseminers
  labels:
    name: madhouseminers
