kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  namespace: madhouseminers
spec:
  replicas: 4
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: ghcr.io/madhouseminers/login:main
          imagePullPolicy: Always
