kubernetes/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: login-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: login
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/32
        - namespaceSelector:
            matchLabels:
              project: madhouseminers
        - podSelector:
            matchLabels:
              role: api
      ports:
        - protocol: TCP
          port: 4000
